# ticketer

./: .gitignore  LICENSE  Makefile  README.md  clean  configure  pyproject.toml  setup.py
app/: cli.py
app/cli/: cli.py
app/crawler/: items.py  middlewares.py  pipelines.py  settings.py
app/crawler/crawler/: items.py  middlewares.py  pipelines.py  settings.py
app/crawler/crawler/spiders/: schedule.py
app/crawler/spiders/: schedule.py
scripts/: env.sh  run.sh
tg/: .env-base  Makefile  Procfile  README.md  pyproject.toml  telegram_run.py
tg/telegram_bot/: constants.py  notifier_bot.py  settings.py
ticketer/: scrapy.cfg
ticketer-crawler/: .env-base  Makefile  Procfile  README.md  app.py  clean  pyproject.toml  settings.py
ticketer-crawler/crawler/ticketer/: items.py  middlewares.py  pipelines.py  settings.py
ticketer-crawler/crawler/ticketer/spiders/: train_schedule.py
ticketer-crawler/scripts/: env.sh  run.sh  run_voice.sh
ticketer-crawler/tasks/: base.py  finder.py
ticketer/ticketer/: middlewares.py  pipelines.py  settings.py
ticketer/ticketer/spiders/: train_schedule.py
