[tool.poetry]
name = "ticketer"
version = "0.1.0"
description = "Tool to find available tickets"
authors = ["Alex Limontov <alex.limontov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
scrapy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
